--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
       <div class = 'jumbotron container myjumbo'>
-        <h1> Location Photo and Tracker</h1>
+        <h1> Crowd Sourced Gelocation Information</h1>
         <h1 id='myH1'></h1>
         <p id='myP1'></p>
         <div class='row container'>
@@ -33,15 +33,11 @@
     <div class='jumbotron container'>
       <form class='my_form'>
         <div class='form-group'>
-          <label for="date">Give Date for Picture</label>
-          <input id="date" class="form-control" type="text">
-          <label for="feel">How do you feel today</label>
+          <label for="feel">Location Information</label>
           <input id="feel" class="form-control" type="text">
         </div>
         <br>
-        <center><button id = "form-button" class='btn btn-primary btn-lg'  type="submit">Show Location Pics</button></center><br/>
-        <center><button id = "show-all" class='btn btn-primary btn-lg'>Show All Location Check-In's</button></center><br/>
-
+        <center><button id = "form-button" class='btn btn-primary btn-lg'  type="submit">Update Location Info</button></center><br/>
         <p></p>
       </form>
     </div>
