--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,13 @@
     crossorigin=""></script>
     <title>Express Demo</title>
   </head>
-  <body>
+  <body class='mybody'>
       <div class = 'jumbotron container myjumbo'>
         <h1> Crowd Sourced Gelocation Information</h1>
         <h1 id='myH1'></h1>
         <p id='myP1'></p>
         <div class='row container'>
-            <div class='col-md-6 col-lg-6 cols-sm-6 container'><img src='' id='myImg' class='myimg'></div>
-            <div class='col-md-6 col-lg-6 cols-sm-6 container' id='map'></div>
+            <div class='col-md-12 col-lg-12 cols-sm-12 container' id='map'></div>
         </div>
         <h1 id='feelings'></h1>
       
@@ -31,13 +30,13 @@
     
           </div>
     <div class='jumbotron container'>
-      <form class='my_form'>
+      <form class='my_form' action="/" method="get">
         <div class='form-group'>
           <label for="feel">Location Information</label>
-          <input id="feel" class="form-control" type="text">
+          <input id="note" class="form-control" type="text">
         </div>
         <br>
-        <center><button id = "form-button" class='btn btn-primary btn-lg'  type="submit">Update Location Info</button></center><br/>
+        <center><button id ='form-button' class='btn btn-primary btn-lg' type='submit'>Update Location Info</button></center><br/>
         <p></p>
       </form>
     </div>
